# AeroDraft

./: .gitignore  README.md  camera.py  config.py  fix.py  hand_tracker.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
aerodraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/: auth.py  schemas.py  server.py  shared_state.py
config/: loader.py
core/: adaptive_quality.py  benchmark.py  container.py  coordinate_filter.py  depth_estimator.py  error_recovery.py  logging_setup.py  one_euro_filter.py  parallel_pipeline.py  pipeline.py  sketch_path.py
engine/: catalog.py  object_renderer.py  projection.py  sketch_renderer.py  wireframe_renderer.py
gestures/: gesture_classifier.py  object_renderer.py  state_machine.py
tests/: test_api.py  test_benchmark.py  test_camera.py  test_catalog.py  test_coordinate_filter.py  test_depth_estimator.py  test_gesture_classifier.py  test_hand_tracker.py  test_hud_renderer.py  test_object_renderer.py  test_one_euro_filter.py  test_pipeline.py  test_projection.py  test_sketch_path.py  test_sketch_renderer.py  test_state_machine.py  test_wireframe_renderer.py
ui/: hud_renderer.py
