[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerodraft"
version = "0.10.0"
description = "Edge AI spatial visualization for electrical hardware retailers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anushath15", email = "your.email@example.com"}
]
keywords = ["computer-vision", "mediapipe", "augmented-reality", "edge-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python>=4.10.0",
    "mediapipe>=0.10.14",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
aerodraft = "main:main"

[project.urls]
Homepage = "https://github.com/Anushath15/AeroDraft"
Repository = "https://github.com/Anushath15/AeroDraft"
Issues = "https://github.com/Anushath15/AeroDraft/issues"

[tool.setuptools]
py-modules = [
    "main",
    "config",
    "camera",
    "hand_tracker",
    "conftest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "engine*", "gestures*", "ui*", "tests*"]